@@ -1,5 +1,6 @@
 package com.housekeeping.customhandler;
 
+import com.housekeeping.DTO.UserDTO;
 import com.housekeeping.DTO.oauth2.CustomOAuth2User;
 import com.housekeeping.jwt.JWTUtil;
 import com.housekeeping.service.RefreshTokenService;
@@ -8,58 +9,61 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 @RequiredArgsConstructor
 public class CustomOAuth2SuccessHandler extends SimpleUrlAuthenticationSuccessHandler {
-    private static final Logger logger = LoggerFactory.getLogger(CustomOAuth2SuccessHandler.class);
     private final JWTUtil jwtUtil;
     private final RefreshTokenService refreshTokenService;
 
     @Override
     public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
         CustomOAuth2User customOAuth2User = (CustomOAuth2User) authentication.getPrincipal();
+        UserDTO userDto = customOAuth2User.getUserDTO();
 
-        String name = customOAuth2User.getName();
-        String email = customOAuth2User.getEmail();
-        String role = authentication.getAuthorities().iterator().next().getAuthority();
-        Long userId = customOAuth2User.getUserId();
+        handleNewUser(response, userDto);
+    }
 
-        logger.debug("Name: {}, Email: {}, Role: {}, UserId: {}", name, email, role, userId);
+    private void handleNewUser(HttpServletResponse response, UserDTO userDto) throws IOException {
+        String tempToken = jwtUtil.createJwt("temp", userDto.getEmail(), "ROLE_USER", null, 5 * 60 * 1000L); // 5분
 
-        String nickname = customOAuth2User.getNickname();
+        UriComponentsBuilder builder = UriComponentsBuilder.fromUriString("http://localhost:5173/firstLogin")
+                .queryParam("token", tempToken)
+                .queryParam("name", URLEncoder.encode(userDto.getName(), StandardCharsets.UTF_8))
+                .queryParam("email", URLEncoder.encode(userDto.getEmail(), StandardCharsets.UTF_8))
+                .queryParam("provider", userDto.getUserPlatform().toString());
 
-        if (nickname == null || nickname.isEmpty()) {
-            logger.info("New user detected. Redirecting to FirstLogin page.");
-            // 임시 토큰 생성 (짧은 유효 기간)
-            String tempToken = jwtUtil.createJwt("temp", email, role, userId, 5 * 60 * 1000L); // 5분
-
-            String redirectUrl = String.format("http://localhost:5173/firstLogin?token=%s&email=%s&name=%s",
-                    URLEncoder.encode(tempToken, "UTF-8"),
-                    URLEncoder.encode(email, "UTF-8"),
-                    URLEncoder.encode(name, "UTF-8"));
-
-            response.sendRedirect(redirectUrl);
-            return;
+        if (userDto.getPhoneNumber() != null && !userDto.getPhoneNumber().isEmpty()) {
+            builder.queryParam("phoneNumber", URLEncoder.encode(userDto.getPhoneNumber(), StandardCharsets.UTF_8));
         }
 
-        // 기존 사용자 처리
-        Integer expireS = 24 * 60 * 60;
-        String access = jwtUtil.createJwt("access", nickname, role, userId, 60 * 10 * 1000L);
-        String refresh = jwtUtil.createJwt("refresh", nickname, role, userId, expireS * 1000L);
+        String redirectUrl = builder.build().toUriString();
+        response.sendRedirect(redirectUrl);
+    }
 
-        refreshTokenService.saveRefresh(nickname, expireS, refresh);
 
-        response.addCookie(CookieUtil.createCookie("access", access, 60 * 10));
-        response.addCookie(CookieUtil.createCookie("refresh", refresh, expireS));
+    private void handleExistingUser(HttpServletResponse response, UserDTO userDto) throws IOException {
+        Long userId = userDto.getUserId();
+        String role = userDto.getRole();
+        String nickname = userDto.getNickname();
 
-        String encodedName = URLEncoder.encode(name, "UTF-8");
-        response.sendRedirect("http://localhost:5173/oauth2-jwt-header?name=" + encodedName);
+        Integer accessTokenExpirationSeconds = 60 * 10; // 10분
+        Integer refreshTokenExpirationSeconds = 60 * 60 * 24; // 24시간
+
+        String accessToken = jwtUtil.createJwt("access", nickname, role, userId, accessTokenExpirationSeconds * 1000L);
+        String refreshToken = jwtUtil.createJwt("refresh", nickname, role, userId, refreshTokenExpirationSeconds * 1000L);
+
+        refreshTokenService.saveRefresh(nickname, refreshTokenExpirationSeconds, refreshToken);
+
+        response.addCookie(CookieUtil.createCookie("access", accessToken, accessTokenExpirationSeconds));
+        response.addCookie(CookieUtil.createCookie("refresh", refreshToken, refreshTokenExpirationSeconds));
+
+        response.sendRedirect("http://localhost:5173/oauth2-jwt-header");
     }
 }
